# learning-ndk

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jack/learning/ndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt
app/src/main/cpp/cmake/: CMakeLists.txt  com_jack_learning_ndk_cmake_JNICMake.cpp  com_jack_learning_ndk_cmake_JNICMake.h
app/src/main/cpp/cmaketwo/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/mk/: Android.mk  Parent.cpp  Parent.h  com_jack_learning_ndk_mk_JNIMK.cpp  com_jack_learning_ndk_mk_JNIMK.h
app/src/main/cpp/mkhandleimage/: AlgFunc.cpp  AlgFunc.h  Android.mk  com_jack_learning_ndk_mkhandleimage_JNIMKHandleImage.cpp  com_jack_learning_ndk_mkhandleimage_JNIMKHandleImage.h
app/src/main/cpp/util/: Log.h
app/src/main/java/com/jack/learning/ndk/: MainActivity.java
app/src/main/java/com/jack/learning/ndk/cmake/: JNICMake.java
app/src/main/java/com/jack/learning/ndk/cmakeTwo/: JNICMakeTwo.java
app/src/main/java/com/jack/learning/ndk/mk/: JNIMK.java
app/src/main/java/com/jack/learning/ndk/mkhandleimage/: JNIMKHandleImage.java  ProcessResult.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jack/learning/ndk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
