# For more information about using CMake with Android Studio, read the
# documentation: https://d.android.com/studio/projects/add-native-code.html

# Sets the minimum version of CMake required to build the native library.
#cmake version
cmake_minimum_required(VERSION 3.4.1)

#exec sub dir
ADD_SUBDIRECTORY(cmake)
ADD_SUBDIRECTORY(cmaketwo)